--- a/src/main/frontend/themes/registrations/styles.css
+++ b/src/main/frontend/themes/registrations/styles.css
@@ -1,4 +1,5 @@
 @import url('./main-layout.css');
-@import url('./views/anmeldungen-view.css');
+@import url('./views/event-registrations-view.css');
 @import url('./views/events-view.css');
 @import url('./views/persons-view.css');
+@import url('./views/registrations-view.css');
