Refactor views to use a shared EditView base class and consolidate related styles.

--- a/src/main/frontend/themes/registrations/styles.css
+++ b/src/main/frontend/themes/registrations/styles.css
@@ -1,8 +1,7 @@
 @import url('./main-layout.css');
 @import url('./components/checkbox-switch.css');
 @import url('./views/event-registrations-view.css');
-@import url('./views/events-view.css');
-@import url('./views/persons-view.css');
+@import url('./views/edit-view.css');
 @import url('./views/registrations-view.css');
 
 html {
