--- a/src/main/frontend/themes/registrations/views/edit-view.css
+++ b/src/main/frontend/themes/registrations/views/edit-view.css
@@ -1,34 +1,34 @@
-.persons-view {
+.edit-view {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
-.persons-view vaadin-split-layout {
+.edit-view vaadin-split-layout {
   width: 100%;
   height: 100%;
 }
 
-.persons-view vaadin-grid {
+.edit-view vaadin-grid {
   height: 100%;
 }
 
-.persons-view .editor-layout {
+.edit-view .editor-layout {
   display: flex;
   flex-direction: column;
   width: 400px;
 }
 
-.persons-view .editor {
+.edit-view .editor {
   flex-grow: 1;
   padding: var(--lumo-space-l);
 }
 
-.persons-view .editor vaadin-checkbox {
+.edit-view .editor vaadin-checkbox {
   padding-top: var(--lumo-space-m);
 }
 
-.persons-view .button-layout {
+.edit-view .button-layout {
   width: 100%;
   flex-wrap: wrap;
   background-color: var(--lumo-contrast-5pct);
@@ -39,6 +39,6 @@
   gap: var(--lumo-space-m);
 }
 
-.persons-view .grid-wrapper {
+.edit-view .grid-wrapper {
   width: 100%;
 }
