Update UI for invitations, adjust layout, and improve translations
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/frontend/themes/registrations/views/edit-view.css
+++ b/src/main/frontend/themes/registrations/views/edit-view.css
@@ -37,6 +37,9 @@
   padding-left: var(--lumo-space-l);
   padding-right: var(--lumo-space-l);
   gap: var(--lumo-space-m);
+
+  position: absolute;
+  bottom: 0;
 }
 
 .edit-view .grid-wrapper {
