#11 Refactor UI components and improve role-based access control.
Replaced `Button` with a custom `Icon` component for better consistency across UI elements. Updated access roles from `ADMIN` to `USER` for multiple views to align with revised security policies. Improved email generation logic and addressed existing database queries with optimizations.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/frontend/themes/registrations/styles.css
+++ b/src/main/frontend/themes/registrations/styles.css
@@ -23,3 +23,12 @@ html {
 vaadin-button {
     cursor: pointer;
 }
+
+.delete-icon {
+    cursor: pointer;
+    color: var(--lumo-error-color);
+}
+.action-icon {
+    cursor: pointer;
+}
+
