Apply nowrap to checkbox switch labels.
Signed-off-by: Simon Martinelli <simon@martinelli.ch>

--- a/src/main/frontend/themes/registrations/components/checkbox-switch.css
+++ b/src/main/frontend/themes/registrations/components/checkbox-switch.css
@@ -1,3 +1,7 @@
+vaadin-checkbox[theme~="switch"] {
+    text-wrap: nowrap;
+}
+
 vaadin-checkbox[theme~="switch"]::part(checkbox) {
     width: var(--lumo-size-m);
     border-radius: 9999px;
