--- a/src/main/frontend/themes/registrations/views/event-registrations-view.css
+++ b/src/main/frontend/themes/registrations/views/event-registrations-view.css
@@ -1,16 +1,21 @@
 .event-registrations-view {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
 }
 
 .event-registrations-view vaadin-grid {
     height: 100%;
 }
 
+.event-registrations-view .grid-container {
+    flex: 1;
+    overflow-y: auto;
+}
+
 .event-registrations-view .button-layout {
     width: 100%;
-    flex-wrap: wrap;
+
     background-color: var(--lumo-contrast-5pct);
     padding-bottom: var(--lumo-space-s);
     padding-top: var(--lumo-space-s);
